# peng

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.txt
cmake/: CompilerWarnings.cmake  ExternFetcher.cmake  StandardProjectSettings.cmake
src/: main.cpp
src/quad_mesher/: CMakeLists.txt  main.cpp  placeholder.cpp
src/quad_mesher/algorithm/: CMakeLists.txt  division_corner_checker.cpp  division_corner_checker.h  division_feature.h
src/quad_mesher/model/: CMakeLists.txt  coordinate.h  division.h  tree.h
test/: CMakeLists.txt  test_empty.cpp
